--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,43 @@
 /*  your css code here. If applicable */
+:root {
+  font-family: Arial, Helvetica, sans-serif;
+}
+.card {
+  width: 50%;
+  padding: 15px;
+  background-color: #f1f1f1;
+  margin: 0 auto;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px 2px rgba(132, 102, 102, 0.507);
+}
+
+img {
+  display: block;
+  width: 80%;
+  height: 200px;
+  object-fit:cover;
+  margin: 0 auto;
+}
+h1 {
+  font-size: 2.4em;
+  text-align: center;
+}
+p {
+  color: black;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+button {
+  background-color: red;
+  color: white;
+  border-radius: 25px;
+  border: none;
+  font-size: 1.5em;
+  display: block;
+  padding: 10px 20px;
+  font-weight: 800;
+  margin: 0 auto;
+}
+
